# econ_622_computational_econ

./: Manifest.toml  Project.toml  README.md  pyproject.toml  requirements.txt
assessments/: problem_set_0.ipynb  problem_set_1.html  problem_set_1.ipynb  problem_set_2.html  problem_set_2.ipynb  problem_set_3.html  problem_set_3.ipynb
slides/: bayesian_methods.ipynb  deep_learning.ipynb  differentiation.ipynb  embeddings_nlp_llm.ipynb  factorizations_direct_methods.ipynb  high_dimensional_probability.ipynb  intro.ipynb  iterative_methods.ipynb  julia_factorizations_direct_methods.ipynb  julia_iterative_methods.ipynb  julia_least_squares.ipynb  kernel_methods.ipynb  least_squares.ipynb  optimization.ipynb  optimization_jax.ipynb  overparameterization_generalization.ipynb  python_frameworks.ipynb  solving_equilibrium_problems.ipynb  transformers_attention.ipynb
