[project]
name = "grad-econ-ML"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "arviz>=0.23.0",
    "datasets>=4.4.2",
    "evaluate>=0.4.6",
    "flax>=0.12.2",
    "google-genai>=1.56.0",
    "gpytorch>=1.14.3",
    "graphviz>=0.21",
    "h5py>=3.15.1",
    "ipython>=9.1.0",
    "jax-dataloader>=0.1.4",
    "jax[cpu]>=0.8.2",
    "jaxlib>=0.8.2",
    "joblib>=1.5.3",
    "jsonargparse[signatures]>=4.45.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "lineax>=0.0.8",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "optax>=0.2.6",
    "optimistix>=0.0.11",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.11.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]
